feat : 주요 페이지 뷰 템플릿 추가

--- a/mongle/src/main/resources/static/store.html
+++ b/mongle/src/main/resources/static/store.html
@@ -101,7 +101,7 @@
   </div>
   <nav>
     <a href="/diary.html">일기 작성</a>
-    <a href="/list.html">일기 목록</a>
+    <a href="/diarylist.html">일기 목록</a>
     <a href="/store.html">스토어</a>
     <a href="/mypage.html">마이페이지</a>
   </nav>
