feat : 닉네임 수정 기능

--- a/mongle/src/main/resources/static/diarysub.html
+++ b/mongle/src/main/resources/static/diarysub.html
@@ -89,7 +89,7 @@
 <body>
 <header>
     <div class="logo">
-        <img src="../templates/image.png" alt="몽글몽글"></div>
+        <img src="images/image.png" alt="몽글몽글"></div>
     </div>
     <nav>
         <a href="/diary.html">일기 작성</a>
